--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "next start",
     "lint": "next lint",
     "commit": "cz",
-    "prepare": "npx husky install"
+    "prepare": "npx husky install",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "@types/node": "20.8.10",
@@ -41,7 +43,8 @@
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6"
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "typescript-jest": "^0.0.0"
   },
   "config": {
     "commitizen": {
